<resources>
    <string name="app_name">Pawsome</string>
    <string name="your_server_client_id">70386804757-a9rdns5f9dgd82ufhg7k4des6rj76bvv.apps.googleusercontent.com</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="Scan">Scan</string>
    <string name="list">List</string>
    <string name="scan">Scan</string>
    <string name="name">name</string>
    <string name="enter_your_name">enter_your_name</string>
    <string name="enter_your_email">enter_your_email</string>
    <string name="submit">submit</string>
    <string name="badges">badges</string>
    <string name="back_button_description">back_button_description</string>
    <string name="upload">upload</string>
    <string name="user_name">Username: %1$s</string>
    <string name="cat_image">cat_image</string>
    <string name="cat_description">Cat Description</string>
    <string name="cat_name">Cat Name</string>
    <string name="github_repo_url">https://api.github.com/repos/baldbuffalo/Pawsome/releases</string>
    <string name="description">Description</string>
</resources>