<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- RecyclerView for displaying items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:clipToPadding="false"
        android:background="@android:color/white"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- BottomBar with buttons -->
    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FF6200EE"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Buttons within the bottom bar -->

        <Button
            android:id="@+id/ListButton"
            android:layout_width="33dp"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:text="@string/list" />

        <Button
            android:id="@+id/BadgesButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/badges" />

        <Button
            android:id="@+id/ScanButton"
            android:layout_width="44dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:text="@string/scan" />

        <Button
            android:id="@+id/ProfileButton"
            android:layout_width="40dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/profile" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:text="Upload Image" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
